# rust_wasm_test_game

./: .gitignore  Cargo.toml  Trunk.toml  index.html  info.txt
src/: lib.rs  renderer_2d.rs
src/assets/: image_loader_hardcoded.rs  mod.rs
src/interactions/: keyboard.rs  mouse.rs
src/world/: mod.rs  render_world.rs  render_world_layers.rs  world.rs
